--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -80,7 +80,19 @@
                 <label for="autodelete" class="translate">Delete Countdown when done</label>
                 <span class="translate"></span>
             </div>
-            
+        </div>
+
+        <div class="row">
+
+            <div class="input-field col s11 m2">
+                <select class="value" id="dateType">
+                    <option value="EuropeDot" class="translate">DD.MM.YYYY HH:SS</option>
+                    <option value="EuropeMinus" class="translate">DD-MM-YYYY HH:SS</option>
+                    <option value="USDot" class="translate">MM.DD.YYYY HH:SS</option>
+                    <option value="USMinuts" class="translate">MM-DD-YYYY HH.SS</option>
+                </select>
+                <label for="datetype" class="translate">datetype</label>
+            </div>
         </div>
         <div class="row">
             <div class="col s12">
