--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -85,13 +85,13 @@
         <div class="row">
 
             <div class="input-field col s11 m2">
-                <select class="value" id="dateType">
+                <select class="value" id="dateFormat">
                     <option value="EuropeDot" class="translate">DD.MM.YYYY HH:SS</option>
                     <option value="EuropeMinus" class="translate">DD-MM-YYYY HH:SS</option>
                     <option value="USDot" class="translate">MM.DD.YYYY HH:SS</option>
                     <option value="USMinuts" class="translate">MM-DD-YYYY HH.SS</option>
                 </select>
-                <label for="datetype" class="translate">datetype</label>
+                <label for="dateFormat" class="translate">dateFormat</label>
             </div>
         </div>
         <div class="row">
