--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -86,10 +86,10 @@
 
             <div class="input-field col s11 m2">
                 <select class="value" id="dateFormat">
-                    <option value="EuropeDot" class="translate">DD.MM.YYYY HH:SS</option>
-                    <option value="EuropeMinus" class="translate">DD-MM-YYYY HH:SS</option>
-                    <option value="USDot" class="translate">MM.DD.YYYY HH:SS</option>
-                    <option value="USMinuts" class="translate">MM-DD-YYYY HH.SS</option>
+                    <option value="EuropeDot" class="translate">DD.MM.YYYY HH:MM</option>
+                    <option value="EuropeMinus" class="translate">DD-MM-YYYY HH:MM</option>
+                    <option value="USDot" class="translate">MM.DD.YYYY HH:MM</option>
+                    <option value="USMinuts" class="translate">MM-DD-YYYY HH.MM</option>
                 </select>
                 <label for="dateFormat" class="translate">dateFormat</label>
             </div>
