--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -121,6 +121,10 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
+                <input type="checkbox" id="totalNoOfHours" class="value" />
+                <label for="totalNoOfWeeks" class="translate">totalNoOfWeeks</label>
+            </div> 
+            <div class="input-field col s6">
                 <input type="checkbox" id="endDate" class="value" />
                 <label for="endDate" class="translate">endDate</label>
             </div> 
