--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="input-field col m4">
                 <input class="value" id="autodelete" type="checkbox" />
-                <label for="autodelete" class="translate">Delete Countdown when done</label>
+                <label for="autodelete" class="translate">autodelete</label>
                 <span class="translate"></span>
             </div>
         </div>
