--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -121,7 +121,7 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input type="checkbox" id="totalNoOfHours" class="value" />
+                <input type="checkbox" id="totalNoOfWeeks" class="value" />
                 <label for="totalNoOfWeeks" class="translate">totalNoOfWeeks</label>
             </div> 
             <div class="input-field col s6">
