--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -90,6 +90,8 @@
                     <option value="EuropeMinus" class="translate">DD-MM-YYYY HH:MM</option>
                     <option value="USDot" class="translate">MM.DD.YYYY HH:MM</option>
                     <option value="USMinuts" class="translate">MM-DD-YYYY HH.MM</option>
+                    <option value="YearFirst" class="translate">YYYY-MM-DD HH.MM</option>
+
                 </select>
                 <label for="dateFormat" class="translate">dateFormat</label>
             </div>
