--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="col s12 m3 l2 input-field">
-                    <input class="value" id="CountDate" size="5" type="date" />
+                    <input class="value" id="CountDate" size="5" type="datetime-local" />
                     <label class="translate" for="date">date</label>
                 </div>
                 <div class="col s5 m3 l2">
