--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -64,6 +64,20 @@
                 let CountdownDate = $('#CountDate').val();
                 let CountdownTime = $('#CountTime').val();
 
+                if (CountdownName == ''){
+                    showToast(_('Please fill in a name for the countdown!'));
+                }
+                else if ((CountdownTime == '')|| (CountdownDate =='')) {
+                    showToast(_('Please fill in date and time for the countdown!'))
+                }
+                else {
+                    sendTo(adapter + "." + instance, 'countdown', {
+                    name: CountdownName,
+                    date: '15.04.2020 12:10:01'
+                    })
+                }
+                
+
                 console.log('Countdown ' + CountdownName + ' ' + CountdownDate)
             });
         }
@@ -165,11 +179,9 @@
 
                 <div class="col s12 m3 l2 input-field">
                     <input class="value" id="CountDate" size="5" type="date" />
-                    <label class="translate" for="date">date</label>
                 </div>
                 <div class="col s12 m3 l2 input-field">
                     <input class="value" id="CountTime" size="5" type="time" />
-                    <label class="translate" for="date">time</label>
                 </div>
                 <div class="col s5 m3 l2">
                     <a id="addCountdown" class=" btn-small"><span class="translate">addCountdown</span></a>
