--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -71,11 +71,17 @@
                     showToast(_('Please fill in date and time for the countdown!'))
                 }
                 else {
+                    var CountDateTime = '';
+                    let inputDateTime = CountdownDate + ' ' + CountdownTime
+                    var messageDate = moment(inputDateTime, 'DD.MM.YYYY HH:mm').toDate();
+                    var CountDateTime = moment(messageDate).format('DD') + '.' + moment(messageDate).format('MM') + '.' + 
+                                    moment(messageDate).format('YYYY') + ' ' + moment(messageDate).format('HH') + ':' + 
+                                    moment(messageDate).format('mm') + ':00' 
                     sendTo('countdown.0', 'send', {
                     name: CountdownName,
-                    date: '15.04.2020 12:10:01'
+                    date: CountDateTime
                     })
-                    showToast(_('Countdown added.'))
+                    showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
 
                 }
                 
