--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,7 +82,9 @@
                     date: CountDateTime
                     })
                     showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
-
+                    $('#CountName').val() = '';
+                    $('#CountDate').val() = '';
+                    $('#CountTime').val() = '';
                 }
                 
 
