--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -24,6 +24,8 @@
 <!-- you have to define 2 functions in the global scope: -->
 <script type="text/javascript">
     var setup = [];
+    const moment = require('moment');
+
     // the function loadSettings has to exist ...
     function save(callback) {
             var obj = {};
