--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -78,7 +78,8 @@
                     var CountDateTime =  CountDay + '.' + CountMonth + '.' + CountYear +  ' ' + CountdownTime + ':00' 
                     sendTo('countdown.0', 'send', {
                     name: CountdownName,
-                    date: '31.03.2020 12:01:01'
+                    //date: '31.03.2020 12:01:01'
+                    date: CountDateTime
                     })
                     showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     $('#CountName').val() = '';
