--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,6 +82,16 @@
                     //date: '31.03.2020 12:01:01'
                     date: CountDateTime
                     })
+
+                    sendTo('countdown.0', 'send', {
+                        name: CountdownName,
+                            //date: '31.03.2020 12:01:01'
+                            date: CountDateTime
+                    }, function (res) {
+                            
+                                console.log('Sent to ' + res + ' users');
+
+                    });
                     showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     $('#CountName').val() = '';
                     $('#CountDate').val() = '';
