--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,7 +82,7 @@
                     //date: '31.03.2020 12:01:01'
                     date: CountDateTime
                     })
-
+                    /*
                     sendTo('countdown.0', 'send', {
                         name: CountdownName,
                             //date: '31.03.2020 12:01:01'
@@ -92,7 +92,8 @@
                                 console.log('Sent to ' + res + ' users');
 
                     });
-                    showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
+                    */
+                    //showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     $('#CountName').val() = '';
                     $('#CountDate').val() = '';
                     $('#CountTime').val() = '';
