--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -77,6 +77,7 @@
                     let CountDay =  CountdownDate.slice(8, 8 + 2)
                     var CountDateTime = ''
                     CountDateTime =  CountDay + '.' + CountMonth + '.' + CountYear +  ' ' + CountdownTime + ':00' 
+                    CountDateTime = '31.03.2020 12:01:01'
                     sendTo('countdown.0', 'send', {
                     name: CountdownName,
                     //date: '31.03.2020 12:01:01'
