--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,6 +82,8 @@
                     name: CountdownName,
                     //date: '31.03.2020 12:01:01'
                     date: CountDateTime
+                    }, function (result) {
+                        showToast(_(result + 'Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     })
                     /*
                     sendTo('countdown.0', 'send', {
@@ -94,7 +96,6 @@
 
                     });
                     */
-                    //showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     $('#CountName').val() = '';
                     $('#CountDate').val() = '';
                     $('#CountTime').val() = '';
