--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -93,7 +93,7 @@
 
 
 
-                    showToast(_(result + 'Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
+                    showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
 
                     /*
                     sendTo('countdown.0', 'send', {
