--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,6 +82,8 @@
                     "name": CountdownName,
                     //date": '31.03.2020 12:01:01'
                     "date": CountDateTime
+                    }, function(){
+                        console.log('done')
                     })
 
                     /*
