--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -85,6 +85,7 @@
                     }, function(){
                         console.log('done')
                     })
+                    console.log('done1')
 
                     /*
                     sendTo("countdown.0", "send", {
