--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -78,7 +78,8 @@
                     var CountDateTime = ''
                     CountDateTime =  CountDay + '.' + CountMonth + '.' + CountYear +  ' ' + CountdownTime + ':00' 
                     //CountDateTime = '31.03.2020 12:01:01'
-                    
+                    console.log('done234')
+
                     sendTo('countdown.0', 'send', {
                     "name": CountdownName,
                     //date": '31.03.2020 12:01:01'
