--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -77,28 +77,21 @@
                     let CountDay =  CountdownDate.slice(8, 8 + 2)
                     var CountDateTime = ''
                     CountDateTime =  CountDay + '.' + CountMonth + '.' + CountYear +  ' ' + CountdownTime + ':00' 
-                    //CountDateTime = '31.03.2020 12:01:01'
-                    console.log('done234')
-
+                    console.log('done334')
+                    console.log('Adapter data: ' + adapter + ' ' + instance)
                     sendTo('countdown.0', 'send', {
                     "name": CountdownName,
-                    //date": '31.03.2020 12:01:01'
                     "date": CountDateTime
                     }, function(){
                         showToast(_('Countdown ' + CountdownName + ' with date ' + CountDateTime + ' added.'))
                     })
                     
-                    console.log('done1')
-
-
                     /*
                     $('#CountName').val() = '';
                     $('#CountDate').val() = '';
                     $('#CountTime').val() = '';
                     */
                 }
-                
-
                 console.log('Countdown ' + CountdownName + ' ' + CountdownDate)
             });
         }
