--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -106,8 +106,8 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs">
-                <li class="tab col s2"><a href="#tab-settings"      class="translate active">Settings</a></li>
-                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">Add Countdown</a></li>
+                <li class="tab col s2"><a href="#tab-settings"      class="translate active">settings</a></li>
+                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">addCountdown</a></li>
             </ul>
         </div>
 
