--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -87,7 +87,7 @@
                         CountDateTime += '#'
                     }
                     console.log('CountUp:  ' + CountUp)
-                    console.log('CountUp Orig:  ' + $('#RepeatPeriod').val())
+                    console.log('CountUp Orig:  ' + $('#CountUp').val())
 
 
                     sendTo(adapter + '.' + instance, 'send', {
