--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -237,7 +237,7 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs">
-                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">addCountdown</a></li>
+                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">overview</a></li>
                 <li class="tab col s2"><a href="#tab-settings"      class="translate active">settings</a></li>
             </ul>
         </div>
