--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -237,8 +237,8 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs">
-                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">overview</a></li>
                 <li class="tab col s2"><a href="#tab-settings"      class="translate active">settings</a></li>
+                <li class="tab col s2"><a href="#tab-addcountdown" class="translate">countdowns</a></li>
             </ul>
         </div>
 
@@ -334,7 +334,7 @@
                 </div> 
                 <div class="input-field col s6">
                     <input type="checkbox" id="endDate" class="value" />
-                    <label for="endDate" class="translate">endDate</label>
+                    <label for="endDate" class="translate">date</label>
                 </div> 
             </div>
         </div>
